[package]
name = "pcmci_causal_discovery"
version = "0.1.0"
edition = "2021"
authors = ["Machine Learning for Trading Contributors"]
description = "PCMCI Causal Discovery implementation for trading"
license = "MIT"
readme = "../README.md"

[dependencies]
# Core ML
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-rand = "0.14"
rand = "0.8"
rand_distr = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client for APIs
reqwest = { version = "0.11", features = ["json"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Parallel processing
rayon = "1.8"

# CSV for data loading
csv = "1.3"

# Progress bar
indicatif = "0.17"

[dev-dependencies]
tokio-test = "0.4"
approx = "0.5"

[[example]]
name = "simple_backtest"
path = "examples/simple_backtest.rs"

[[example]]
name = "bybit_live"
path = "examples/bybit_live.rs"
